<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:text="@string/push_init"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_init" />

            <TextView
                android:id="@+id/tv_initTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/init_tips" />

            <Button
                android:id="@+id/btn_bind"
                android:layout_marginTop="10dp"
                android:text="@string/push_bind"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_bindTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/bind_tips" />

            <Button
                android:id="@+id/btn_unbind"
                android:layout_marginTop="10dp"
                android:text="@string/push_unbind"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_unBindTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/unbind_tips" />

            <Button
                android:id="@+id/btn_uploadThirdToken"
                android:layout_marginTop="10dp"
                android:text="@string/push_uploadThirdToken"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_uploadThirdTokenTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/uploadThirdToken_tips" />

            <CheckBox
                android:id="@+id/use_default_push"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/use_default_msg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">
                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:text="AdToken"
                    />
                <EditText
                    android:id="@+id/adtoken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">
                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:text="channelId"
                    />
                <EditText
                    android:id="@+id/rdToken"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp">
                <TextView
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:text="userId"
                    />
                <EditText
                    android:id="@+id/userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:id="@+id/result_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
